# OpenGLTutorial

./: .gitignore  CMakeLists.txt  Makefile
assets/globe/: globe.mtl
include/: Camera.hpp  Logger.hpp  Mesh.hpp  Model.hpp  Shader.hpp
shaders/: Cube.fs  Cube.vs  Model.fs  Model.vs  ModelWithLight.fs
src/: Camera.cpp  Main.cpp  Mesh.cpp  Model.cpp  Shader.cpp
